# lib6502

./: CMakeLists.txt  LICENSE  Makefile  README.md
include/lib6502/: 6502.h
src/: 6502.c  addressing.c  addressing.h  flags.c  flags.h  instructions.c  instructions.h  opcodes.c  opcodes.h  operand.h  stack.c  stack.h  trace.c  trace.h  vectors.c  vectors.h
test/: test-basic-load-store.c  test-klaus-functional.c  test-reset  test-reset.c
test/roms/: basic-load-store.asm  klaus-functional.asm  test-machine.cfg
test/utils/: test-machine.c  test-machine.h
